[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "library"
version = "1.0.0"
requires-python = ">=3.10"
authors = [
  {name="Teemu Mahlamäki", email="thoogs@pm.me"}
]
dependencies = [
  "pytest"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pre-commit"
]

[project.scripts]
library_app = "library.tui:main"
